--- a/desktop/.project
+++ b/desktop/.project
@@ -1,30 +1,23 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>LPB_SeaWar-desktop</name>
-	<comment>Project LPB_SeaWar-desktop created by Buildship.</comment>
-	<projects>
-	</projects>
+	<name>SeaWarAi-desktop</name>
+	<comment></comment>
+	<projects/>
+	<natures>
+		<nature>org.eclipse.jdt.core.javanature</nature>
+	</natures>
 	<buildSpec>
 		<buildCommand>
 			<name>org.eclipse.jdt.core.javabuilder</name>
-			<arguments>
-			</arguments>
-		</buildCommand>
-		<buildCommand>
-			<name>org.eclipse.buildship.core.gradleprojectbuilder</name>
-			<arguments>
-			</arguments>
+			<arguments/>
 		</buildCommand>
 	</buildSpec>
-	<natures>
-		<nature>org.eclipse.jdt.core.javanature</nature>
-		<nature>org.eclipse.buildship.core.gradleprojectnature</nature>
-	</natures>
 	<linkedResources>
 		<link>
 			<name>assets</name>
 			<type>2</type>
-			<locationURI>PARENT-1-PROJECT_LOC/core/assets</locationURI>
+			<location>PARENT-1-PROJECT_LOC/core/assets</location>
 		</link>
 	</linkedResources>
+	<filteredResources/>
 </projectDescription>
